add_subdirectory(example-types)
add_subdirectory(example-conditions)
add_subdirectory(example-loops)
add_subdirectory(example-switch)
add_subdirectory(example-adresses)
add_subdirectory(example-enums)
add_subdirectory(example-functions)
add_subdirectory(example-math)
add_subdirectory(example-bits-operation)