add_subdirectory(example-types)
add_subdirectory(example-conditions)
add_subdirectory(example-loops)
add_subdirectory(example-switch)
add_subdirectory(example-adresses)
add_subdirectory(example-enums)
add_subdirectory(example-functions)
add_subdirectory(example-functions-2)
add_subdirectory(example-math)
add_subdirectory(example-bits-operation)
add_subdirectory(life-example-includes)
add_subdirectory(example-io)
add_subdirectory(example-double-trouble)
add_subdirectory(example-structs)
add_subdirectory(example-recursion)
add_subdirectory(example-pointers)
add_subdirectory(example-smart-pointers)
